blacklist fix